--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1>
-                <a href="">LOGO</a>
+                <a href="#home">LOGO</a>
             </h1>
             <nav>
                 <ul>
                     <li><a href="#intro">intro</a></li>
-                    <li><a href="#top3">top 3</a></li>
-                    <li><a href="#">gallery</a></li>
-                    <li><a href="#">work</a></li>
+                    <li><a href="#grid-one">grid-one</a></li>
+                    <li><a href="#gallery">gallery</a></li>
+                    <li><a href="#grid-two">grid-two</a></li>
+                    <li><a href="#pricing">pricing</a></li>
                     <li><a href="#">contact</a></li>
                 </ul>
             </nav>
@@ -28,7 +29,7 @@
 
     <div class="menu-spacing"></div>
 
-    <section id="intro" class="section main-bg intro">
+    <section id="home" class="section main-bg intro">
         <div class="main-content intro-content">
             <div class="intro-text-content">
                 <h2>January brings us Firefox 85</h2>
@@ -42,12 +43,135 @@
         </div>
     </section>
 
-    <section id="top3" class="section white-bg">
+    <section id="intro" class="section white-bg">
         <div class="main-content top3-content">
             <h2>top 3 jobs</h2>
             <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and some surprises at the machine’s performance. This post details some background information on the experience of porting Firefox to run natively on these CPUs.</p>
             <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that needed to know about the new architecture, before moving on to the concept of Universal Binaries.</p>
             <p>We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big Sur, and discuss various updater problems we had to deal with. We’ll conclude with the release and an overview of various other improvements that are in the pipeline.</p>
+        </div>
+    </section>
+
+    <section id="grid-one" class="section main-bg grid-one">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">My Grid</h2>
+            <p class="grid-description">Uma breve descrição.</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste 1</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit assumenda voluptas, dolore corporis ad optio harum est voluptates? At, minus inventore iusto aperiam animi autem a sequi quae eum rerum.</p>
+                </article>
+                <article>
+                    <h3>Teste 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quis doloribus necessitatibus sit quaerat, incidunt fugit nemo quo iste eum eius dolorem omnis et cumque reiciendis! Ut, vitae! Quisquam, accusantium.</p>
+                </article>
+                <article>
+                    <h3>Teste 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae porro officiis harum, voluptate aperiam ab repellat veniam laborum quam incidunt! Perferendis voluptas inventore exercitationem distinctio qui, consectetur est quidem et!</p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <section id="gallery" class="section white-bg grid-one">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">Gallery</h2>
+            <p class="grid-description">Uma breve descrição.</p>
+            <div class="grid">
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=1" alt="random image from unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=2" alt="random image from unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=3" alt="random image from unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=4" alt="random image from unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=5" alt="random image from unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=6" alt="random image from unsplash">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="grid-two" class="section main-bg grid-one">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">My Grid</h2>
+            <p class="grid-description">Uma breve descrição.</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste 1</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit assumenda voluptas, dolore corporis ad optio harum est voluptates? At, minus inventore iusto aperiam animi autem a sequi quae eum rerum.</p>
+                </article>
+                <article>
+                    <h3>Teste 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quis doloribus necessitatibus sit quaerat, incidunt fugit nemo quo iste eum eius dolorem omnis et cumque reiciendis! Ut, vitae! Quisquam, accusantium.</p>
+                </article>
+                <article>
+                    <h3>Teste 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae porro officiis harum, voluptate aperiam ab repellat veniam laborum quam incidunt! Perferendis voluptas inventore exercitationem distinctio qui, consectetur est quidem et!</p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <section id="pricing" class="section white-bg">
+        <div class="main-content top3-content">
+            <h2>Pricing</h2>
+            <div class="responsive-table">
+                <table>
+                    <caption>Pricing table</caption>
+                    <thead>
+                        <tr>
+                            <th>Title 1</th>
+                            <th>Title 2</th>
+                            <th>Title 3</th>
+                            <th>Title 4</th>
+                            <th>Title 5</th>
+                        </tr>
+                    </thead>
+    
+                    <tbody>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                        </tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                        </tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                            <td>Content 1</td>
+                        </tr>
+                    </tbody>
+    
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Testando</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
         </div>
     </section>
 </body>
